--- a/public/art.html
+++ b/public/art.html
@@ -16,7 +16,7 @@
 
 	<!-- Header -->
 	<header class="w3-container w3-xlarge w3-padding-24">
-		<a href="#" class="w3-left w3-button w3-white">MY ART</a>
+		<a href="index.html" class="w3-left w3-button w3-white">MY ART</a>
 		<a href="#about" class="w3-right w3-button w3-white">About</a>
 	</header>
 
